# mc_mujoco

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.github/workflows/test-standalone/: main.cpp
docker/: Dockerfile  Makefile
src/: CMakeLists.txt  MujocoClient.cpp  MujocoClient.h  config.in.h  main.cpp  mj_configuration.h  mj_sim.cpp  mj_sim.h  mj_sim_impl.h  mj_utils.cpp  mj_utils.h  mj_utils_merge_mujoco_models.cpp  urlab_client.cpp  urlab_client.h
